# Matrix_Display_Qt

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
doc_doxygen/: doc.html  qt6.tags
doc_doxygen/html/: README_8md.html  annotated.html  annotated_dup.js  classMainWindow-members.html  classMainWindow.html  classMainWindow.js  classMainWindow__coll__graph.dot  classMainWindow__coll__graph.map  classMainWindow__coll__graph.md5  classMainWindow__inherit__graph.dot  classMainWindow__inherit__graph.map  classMainWindow__inherit__graph.md5  classMainWindow_a2ac7dc94189b9755b772cf889c82d924_cgraph.map  classMainWindow_a2ac7dc94189b9755b772cf889c82d924_cgraph.md5  classMainWindow_a2ac7dc94189b9755b772cf889c82d924_icgraph.map  classMainWindow_a2ac7dc94189b9755b772cf889c82d924_icgraph.md5  classMainWindow_a39554c60007ae2c7d6895145144872b1_icgraph.map  classMainWindow_a39554c60007ae2c7d6895145144872b1_icgraph.md5  classMainWindow_a439c02181fc4b243de1cc1f8f0fb7522_icgraph.map  classMainWindow_a439c02181fc4b243de1cc1f8f0fb7522_icgraph.md5  classMainWindow_a7c5933cf15ac0d7d2b227204de311f5b_cgraph.map  classMainWindow_a7c5933cf15ac0d7d2b227204de311f5b_cgraph.md5  classMainWindow_a7c5933cf15ac0d7d2b227204de311f5b_icgraph.map  classMainWindow_a7c5933cf15ac0d7d2b227204de311f5b_icgraph.md5  classMainWindow_a90274c294b5be47445b6d5c2cbde7923_icgraph.map  classMainWindow_a90274c294b5be47445b6d5c2cbde7923_icgraph.md5  classMainWindow_a996c5a2b6f77944776856f08ec30858d_cgraph.map  (+132 more)
headers/: mainwindow.h  matrixdisplay.h  matrixfont.h
src/: main.cpp  mainwindow.cpp  matrixdisplay.cpp
(+40 files in other folders)
